--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ h3 {
 .imagenEncabezado {
   width: 100%;
 }
+/* banner de ofertas */
 .imagenEncabezadoOferta {
   width: 100%;
   margin-top: 6rem;
