--- a/css_sass/estilos.scss
+++ b/css_sass/estilos.scss
@@ -105,4 +105,10 @@ header {
       right: 10px;
     }
   }
- 
+  /* banner de ofertas */
+.imagenEncabezadoOferta {
+width: 70%;
+margin-top: 6rem;
+margin-inline-end: 0rem;
+margin-left: 11%;
+}
