--- a/css_sass/estilos.scss
+++ b/css_sass/estilos.scss
@@ -4,6 +4,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css");
 
 @import "footer";
+@import "tarjetasOfertas";
 
 * {
     margin: 0;
