--- a/css_sass/_footer.scss
+++ b/css_sass/_footer.scss
@@ -1,57 +1,58 @@
 /* SECCION FOOTER */
 
-.footer {
-    padding-top: 1rem;
-    background-color: black;
-  }
+
+// .footer {
+//     padding-top: 1rem;
+//     background-color: black;
+//   }
   
-  .footer-sm {
-    background-color: #212121;
-    color: white;
+//   .footer-sm {
+//     background-color: #212121;
+//     color: white;
   
-    a {
-      color: white;
-      transition: height 2s;
+//     a {
+//       color: white;
+//       transition: height 2s;
   
-      &:hover {
-        background-color: #d139f3;
-        color: black;
-      }
+//       &:hover {
+//         background-color: #d139f3;
+//         color: black;
+//       }
   
-      i {
-        font-size: 1rem;
-        margin-left: 1rem;
-      }
-    }
-  }
+//       i {
+//         font-size: 1rem;
+//         margin-left: 1rem;
+//       }
+//     }
+//   }
   
-  .footer-bottom {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
+//   .footer-bottom {
+//     padding-top: 1.5rem;
+//     padding-bottom: 1.5rem;
+//   }
   
-  .footer-up {
-    text-align: center;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    margin: 0 auto;
-  }
+//   .footer-up {
+//     text-align: center;
+//     padding-top: 1.5rem;
+//     padding-bottom: 1.5rem;
+//     margin: 0 auto;
+//   }
   
-  .footer-copy {
-    text-align: center;
-    color: gray;
-    font-weight: 400;
+//   .footer-copy {
+//     text-align: center;
+//     color: gray;
+//     font-weight: 400;
   
-    a {
-      color: gray;
-      text-decoration: none;
+//     a {
+//       color: gray;
+//       text-decoration: none;
   
-      &:hover {
-        color: #72c755;
-        text-decoration: underline;
-      }
-    }
+//       &:hover {
+//         color: #72c755;
+//         text-decoration: underline;
+//       }
+//     }
   
-    display: flex;
-    justify-content: center;
-  }
+//     display: flex;
+//     justify-content: center;
+//   }
