--- a/css_sass/estilos.css
+++ b/css_sass/estilos.css
@@ -25,7 +25,8 @@
 
 .footer-sm a i {
   font-size: 1rem;
-  margin-left: 1rem;
+  margin: 0.4rem;
+  font-size: 2rem;
 }
 
 .footer-bottom {
@@ -38,18 +39,14 @@
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   margin: 0 auto;
+  font-size: 2rem;
 }
 
 .footer-copy {
   text-align: center;
   color: gray;
   font-weight: 400;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  font-size: 1.5rem;
 }
 
 .footer-copy a {
@@ -60,6 +57,26 @@
 .footer-copy a:hover {
   color: #72c755;
   text-decoration: underline;
+}
+
+.footer-copy {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.col3 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 0%;
+          flex: 1 0 0%;
+}
+
+p {
+  font-size: 0.5rem;
+  color: #72c755;
 }
 
 /*Cards*/
