--- a/css_sass/estilos.scss
+++ b/css_sass/estilos.scss
@@ -17,7 +17,7 @@
 
 /* header del index */
 
-header {
+.headerOfertas {
     background-color: #e7f045;
     width: 100%;
     height: 100px;
@@ -26,7 +26,7 @@ header {
     align-items: center;
     position: fixed;
     z-index: 6;
-    margin-top: -7%;    
+    margin-top: 0%;    
   }
   .carousel-inner{
     margin-top: 6.5%;
