--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ textarea {
 .col3{
   flex: 1 0 0%;
 }
-/* MAPA EN EL FOOTER */
+/* MAPA EN EL FOOTER de contacto */
 .ubicacion{
 text-align: center;
 
@@ -469,7 +469,7 @@ text-align: center;
 
 /*VISTA MOVIL */
 
-@media only screen and (max-width: 599px) {
+@media only screen and (min-width: 320px) and (max-width: 600px) {
   .gridPadre {
     display: grid;
     grid-template-columns: 1fr;
@@ -511,18 +511,20 @@ text-align: center;
     width: 100%;
     height: 230px;
   }
+ 
   .logo {
     margin-left: 4px;
-    width: 19%;
+    width: 40%;
     margin-top: 3px;
     margin-right: 1px;
   }
   h1 {
-    letter-spacing: 8px;
+    letter-spacing: 2px;
     font-size: 25px;
-    margin-left: -6rem;
-    margin-right: 5rem;
+     text-align: center;
+    
   }
+
 h3{
   font-size: 20px;
 }
@@ -541,7 +543,7 @@ h3{
   }
 
   /* VISTA TABLET */
-  @media only screen and (min-width: 600px) and (max-width: 900px) {
+  @media only screen and (min-width: 601px) and (max-width: 900px) {
     .gridPadre {
       display: grid;
       grid-template-columns: 1fr 1fr;
