--- a/css_sass/_footer.scss
+++ b/css_sass/_footer.scss
@@ -1,5 +1,5 @@
 /* SECCION FOOTER */
-
+  
 .footer {
     padding-top: 1rem;
     background-color: black;
@@ -16,8 +16,9 @@
   }
   
   .footer-sm a:hover {
-    background-color: #d139f3;
-    color: black;
+    background-color: #f5f842;
+    color: rgb(78, 87, 78);
+  
   }
   
   .footer-sm a i {
@@ -36,7 +37,7 @@
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     margin: 0 auto;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
   
   .footer-copy {
@@ -44,7 +45,6 @@
     color: gray;
     font-weight: 400;
     font-size: 1.5rem;
-    
   }
   
   .footer-copy a {
@@ -61,10 +61,17 @@
     display: flex;
     justify-content: center;
   }
+  .ventas{
+    font-size: 1.5rem;
+    color: #72c755;
+  }
   .col3{
-      flex: 1 0 0%;
+    flex: 1 0 0%;
   }
-  p{
-      font-size: 0.5rem;
-      color: #72c755;
+  /* MAPA EN EL FOOTER de contacto */
+  .ubicacion{
+  text-align: center;
+  
   }
+  /* fin del footer */
+  
