--- a/css_sass/style.css
+++ b/css_sass/style.css
@@ -85,6 +85,370 @@
 }
 
 /* fin del footer */
+/* SECCION CONTACTO */
+#contacto {
+  background-size: 100vw 100vh;
+  background-image: url(../multimedia/fondo-de-contacto.jpg);
+  background-attachment: fixed;
+  margin: 0;
+  padding: 9rem 9rem;
+  text-align: center;
+}
+
+.formulario {
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  padding: 1% 1%;
+  border: solid 1px #0e0e0e;
+  border-radius: 20px;
+  background-color: rgba(190, 232, 242, 0.6);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: monospace;
+}
+
+h2 {
+  background: -webkit-gradient(linear, left top, right top, from(#f32170), color-stop(#ffeb07), color-stop(#2196f3), to(#ff00eb));
+  background: linear-gradient(to right, #f32170, #ffeb07, #2196f3, #ff00eb);
+  font-size: 3rem;
+  font-family: sans-serif;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  text-transform: uppercase;
+  /* inline-block afecta solo al titulo */
+  display: inline-block;
+}
+
+.campo {
+  display: block;
+  width: 80%;
+  padding: 10px;
+  margin: 10px auto;
+  border: none;
+}
+
+textarea {
+  min-height: 100px;
+  max-height: 200px;
+  max-width: 80%;
+}
+
+.boton {
+  color: black;
+  background-color: #d3e4cd;
+  padding: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* ANIMACION EN CONTACTOs */
+.burbuja {
+  border-radius: 50%;
+  background: #1b2e08;
+  opacity: 0.3;
+  position: absolute;
+  bottom: -150;
+  -webkit-animation: burbujas 3s linear infinite;
+          animation: burbujas 3s linear infinite;
+}
+
+.burbuja:nth-child(1) {
+  width: 80px;
+  height: 80px;
+  left: 5%;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+.burbuja:nth-child(2) {
+  width: 100px;
+  height: 100px;
+  left: 35%;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+.burbuja:nth-child(3) {
+  width: 75px;
+  height: 75px;
+  left: 15%;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-delay: 7s;
+          animation-delay: 7s;
+}
+
+.burbuja:nth-child(4) {
+  width: 50px;
+  height: 50px;
+  left: 90%;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+.burbuja:nth-child(5) {
+  width: 70px;
+  height: 70px;
+  left: 65%;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.burbuja:nth-child(6) {
+  width: 79px;
+  height: 79px;
+  left: 50%;
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s;
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+.burbuja:nth-child(7) {
+  width: 49px;
+  height: 49px;
+  left: 43%;
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s;
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+.burbuja:nth-child(8) {
+  width: 61px;
+  height: 61px;
+  left: 78%;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+.burbuja:nth-child(9) {
+  width: 38px;
+  height: 38px;
+  left: 69%;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+
+.burbuja:nth-child(10) {
+  width: 51px;
+  height: 51px;
+  left: 47%;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+@-webkit-keyframes burbujas {
+  0% {
+    bottom: 0;
+    opacity: 0;
+  }
+  30% {
+    -webkit-transform: translateX(30px);
+            transform: translateX(30px);
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    bottom: 100vh;
+    opacity: 0;
+  }
+}
+
+@keyframes burbujas {
+  0% {
+    bottom: 0;
+    opacity: 0;
+  }
+  30% {
+    -webkit-transform: translateX(30px);
+            transform: translateX(30px);
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    bottom: 100vh;
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes movimiento {
+  /* moviento arriba y abajo */
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(15px);
+            transform: translateY(15px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes movimiento {
+  /* moviento arriba y abajo */
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  50% {
+    -webkit-transform: translateY(15px);
+            transform: translateY(15px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+.container-fluid {
+  margin-top: 6rem;
+}
+
+.bannerOferta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #ddf7fc;
+  width: 100%;
+  height: 100%;
+}
+
+.bannerOferta img {
+  width: 80%;
+  margin-top: 6.5rem;
+}
+
+/*Cards*/
+.container-card {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1354px;
+  margin: auto;
+}
+
+.title-cards {
+  width: 100%;
+  max-width: 1080px;
+  margin: auto;
+  padding: 3px;
+  margin-top: 20px;
+  text-align: center;
+  color: #7a7a7a;
+}
+
+.card {
+  width: 100%;
+  margin: 10px;
+  border-radius: 6px;
+  overflow: hidden;
+  background: #fff;
+  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 400ms ease-out;
+  transition: all 400ms ease-out;
+  cursor: default;
+}
+
+h4 {
+  font-size: 1.8rem;
+}
+
+.card:hover {
+  -webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+  -webkit-transform: translateY(-3%);
+  transform: translateY(-3%);
+}
+
+.card img {
+  width: 90%;
+  height: 300px;
+}
+
+.card .contenido-card {
+  padding: 15px;
+  text-align: center;
+}
+
+.card .contenido-card h3 {
+  margin-bottom: 15px;
+  color: #7a7a7a;
+}
+
+.card .contenido-card p {
+  line-height: 1.8;
+  color: #6a6a6a;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.card .contenido-card a {
+  display: inline-block;
+  padding: 10px;
+  margin-top: 10px;
+  text-decoration: none;
+  color: #2fb4cc;
+  border: 1px solid #2fb4cc;
+  border-radius: 4px;
+  -webkit-transition: all 400ms ease;
+  transition: all 400ms ease;
+  margin-bottom: 5px;
+}
+
+.card .contenido-card a:hover {
+  background: #2fb4cc;
+  color: #fff;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .container-card {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .card {
+    margin: 15px;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) and (min-width: 768px) and (max-width: 1024px) {
+  img {
+    width: 90%;
+    height: 200px;
+  }
+}
+
+/*Fin-Cards*/
 /* VARIABLES */
 * {
   margin: 0;
@@ -348,244 +712,6 @@ h3 {
 .imagenesDeOfertas img:hover {
   -webkit-filter: brightness(0.6);
           filter: brightness(0.6);
-}
-
-/* SECCION CONTACTO */
-#contacto {
-  background-size: 100vw 100vh;
-  background-image: url(../multimedia/fondo-de-contacto.jpg);
-  background-attachment: fixed;
-  margin: 0;
-  padding: 9rem 9rem;
-  text-align: center;
-}
-
-.formulario {
-  width: 100%;
-  text-align: center;
-  margin: auto;
-  padding: 1% 1%;
-  border: solid 1px #0e0e0e;
-  border-radius: 20px;
-  background-color: rgba(190, 232, 242, 0.6);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: monospace;
-}
-
-h2 {
-  background: -webkit-gradient(linear, left top, right top, from(#f32170), color-stop(#ffeb07), color-stop(#2196f3), to(#ff00eb));
-  background: linear-gradient(to right, #f32170, #ffeb07, #2196f3, #ff00eb);
-  font-size: 3rem;
-  font-family: sans-serif;
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  text-transform: uppercase;
-  /* inline-block afecta solo al titulo */
-  display: inline-block;
-}
-
-.campo {
-  display: block;
-  width: 80%;
-  padding: 10px;
-  margin: 10px auto;
-  border: none;
-}
-
-textarea {
-  min-height: 100px;
-  max-height: 200px;
-  max-width: 80%;
-}
-
-.boton {
-  color: black;
-  background-color: #d3e4cd;
-  padding: 10px;
-  text-transform: uppercase;
-  font-weight: bold;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-/* ANIMACION EN CONTACTOs */
-.burbuja {
-  border-radius: 50%;
-  background: #1b2e08;
-  opacity: 0.3;
-  position: absolute;
-  bottom: -150;
-  -webkit-animation: burbujas 3s linear infinite;
-          animation: burbujas 3s linear infinite;
-}
-
-.burbuja:nth-child(1) {
-  width: 80px;
-  height: 80px;
-  left: 5%;
-  -webkit-animation-duration: 3s;
-          animation-duration: 3s;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-}
-
-.burbuja:nth-child(2) {
-  width: 100px;
-  height: 100px;
-  left: 35%;
-  -webkit-animation-duration: 3s;
-          animation-duration: 3s;
-  -webkit-animation-delay: 5s;
-          animation-delay: 5s;
-}
-
-.burbuja:nth-child(3) {
-  width: 75px;
-  height: 75px;
-  left: 15%;
-  -webkit-animation-duration: 1.5s;
-          animation-duration: 1.5s;
-  -webkit-animation-delay: 7s;
-          animation-delay: 7s;
-}
-
-.burbuja:nth-child(4) {
-  width: 50px;
-  height: 50px;
-  left: 90%;
-  -webkit-animation-duration: 6s;
-          animation-duration: 6s;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-}
-
-.burbuja:nth-child(5) {
-  width: 70px;
-  height: 70px;
-  left: 65%;
-  -webkit-animation-duration: 3s;
-          animation-duration: 3s;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
-}
-
-.burbuja:nth-child(6) {
-  width: 79px;
-  height: 79px;
-  left: 50%;
-  -webkit-animation-duration: 4s;
-          animation-duration: 4s;
-  -webkit-animation-delay: 5s;
-          animation-delay: 5s;
-}
-
-.burbuja:nth-child(7) {
-  width: 49px;
-  height: 49px;
-  left: 43%;
-  -webkit-animation-duration: 4s;
-          animation-duration: 4s;
-  -webkit-animation-delay: 5s;
-          animation-delay: 5s;
-}
-
-.burbuja:nth-child(8) {
-  width: 61px;
-  height: 61px;
-  left: 78%;
-  -webkit-animation-duration: 3s;
-          animation-duration: 3s;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-}
-
-.burbuja:nth-child(9) {
-  width: 38px;
-  height: 38px;
-  left: 69%;
-  -webkit-animation-duration: 2s;
-          animation-duration: 2s;
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
-}
-
-.burbuja:nth-child(10) {
-  width: 51px;
-  height: 51px;
-  left: 47%;
-  -webkit-animation-duration: 3s;
-          animation-duration: 3s;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-}
-
-@-webkit-keyframes burbujas {
-  0% {
-    bottom: 0;
-    opacity: 0;
-  }
-  30% {
-    -webkit-transform: translateX(30px);
-            transform: translateX(30px);
-  }
-  50% {
-    opacity: 0.4;
-  }
-  100% {
-    bottom: 100vh;
-    opacity: 0;
-  }
-}
-
-@keyframes burbujas {
-  0% {
-    bottom: 0;
-    opacity: 0;
-  }
-  30% {
-    -webkit-transform: translateX(30px);
-            transform: translateX(30px);
-  }
-  50% {
-    opacity: 0.4;
-  }
-  100% {
-    bottom: 100vh;
-    opacity: 0;
-  }
-}
-
-@-webkit-keyframes movimiento {
-  /* moviento arriba y abajo */
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-  50% {
-    -webkit-transform: translateY(15px);
-            transform: translateY(15px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-
-@keyframes movimiento {
-  /* moviento arriba y abajo */
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-  50% {
-    -webkit-transform: translateY(15px);
-            transform: translateY(15px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
 }
 
 /* BOTON DE WHATSAPP */
