--- a/css_sass/_ofertas.scss
+++ b/css_sass/_ofertas.scss
@@ -1,3 +1,5 @@
+
+
 .container-fluid{
     margin-top: 6rem;
 }
@@ -5,16 +7,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ddf7fc;
+     background-color: #ddf7fc;
     width: 100%;
     height: 100%;
 }
 .bannerOferta img{
     width: 80%;
     margin-top: 6.5rem;
-    
-}
-
+    }
+    /* NAV BOOTSTRAP*/
+// .navbar-expand-lg{
+// flex-wrap: nowrap;
+// justify-content: flex-end;
+// }
 /*Cards*/
 .container-card {
     width: 100%;
@@ -24,7 +29,7 @@
     max-width: 1354px;
     margin: auto;
   }
-  
+
   .title-cards {
     width: 100%;
     max-width: 1080px;
@@ -34,7 +39,7 @@
     text-align: center;
     color: #7a7a7a;
   }
-  
+
   .card {
     width: 100%;
     margin: 10px;
@@ -47,40 +52,40 @@
     transition: all 400ms ease-out;
     cursor: default;
   }
-  
+
   h4 {
     font-size: 1.8rem;
   }
-  
+
   .card:hover {
     -webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
             box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
     -webkit-transform: translateY(-3%);
             transform: translateY(-3%);
   }
-  
+
   .card img {
     width: 90%;
     height: 300px;
   }
-  
+
   .card .contenido-card {
     padding: 15px;
     text-align: center;
   }
-  
+
   .card .contenido-card h3 {
     margin-bottom: 15px;
     color: #7a7a7a;
   }
-  
+
   .card .contenido-card p {
     line-height: 1.8;
     color: #6a6a6a;
     font-size: 14px;
     margin-bottom: 5px;
   }
-  
+
   .card .contenido-card a {
     display: inline-block;
     padding: 10px;
@@ -93,12 +98,12 @@
     transition: all 400ms ease;
     margin-bottom: 5px;
   }
-  
+
   .card .contenido-card a:hover {
     background: #2fb4cc;
     color: #fff;
   }
-  
+
   @media only screen and (min-width: 320px) and (max-width: 768px) {
     .container-card {
       -ms-flex-wrap: wrap;
@@ -108,13 +113,12 @@
       margin: 15px;
     }
   }
-  
+
   @media only screen and (min-width: 320px) and (max-width: 768px) and (min-width: 768px) and (max-width: 1024px) {
     img {
       width: 90%;
       height: 200px;
     }
   }
-  
+
   /*Fin-Cards*/
-  
