correcciones en ofertas

--- a/css_sass/_contacto.scss
+++ b/css_sass/_contacto.scss
@@ -4,7 +4,7 @@
     background-image: url(../multimedia/fondo-de-contacto.jpg);
     background-attachment: fixed;
     margin: 0;
-    padding: 9rem 9rem;
+    padding: 1px 1px;
     text-align: center;
   }
   
