--- a/css_sass/_ofertas.scss
+++ b/css_sass/_ofertas.scss
@@ -1,4 +1,44 @@
 
+/* BARRA DE NAVECION DE OFERTAS*/
+.navOfertas{
+  background-color: #0769e9;
+  height: 80px;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+  max-width: 992px;
+  margin: 0 auto;
+}
+.nav-link {
+  color: white;
+  text-decoration: none;
+}
+.nav-menu {
+  display: flex;
+  margin-right: 40px;
+  list-style: none;
+}
+.nav-menu-item {
+  font-size: 18px;
+  margin: 0 10px;
+  line-height: 80px;
+  text-transform: uppercase;
+  width: max-content;
+}
+.nav-menu-link {
+  padding: 8px 12px;
+  border-radius: 3px;
+}
+
+.nav-menu-link:hover,
+.nav-menu-link_active {
+  background-color: #034574;
+  transition: 0.5s;
+}
 
 .container-fluid{
     margin-top: 6rem;
@@ -15,11 +55,7 @@
     width: 80%;
     margin-top: 6.5rem;
     }
-    /* NAV BOOTSTRAP*/
-// .navbar-expand-lg{
-// flex-wrap: nowrap;
-// justify-content: flex-end;
-// }
+ 
 /*Cards*/
 .container-card {
     width: 100%;
@@ -119,6 +155,56 @@
       width: 90%;
       height: 200px;
     }
+  }/*FIN DE CARD*/
+  /*MEDIA DE NAVEGACION*/
+   /* MOBILE */
+   @media (max-width: 768px) {
+    body {
+      padding-top: 70px;
+    }
+  
+    .navOfertas {
+      height: 60px;
+    }
+   
+    .nav-menu {
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      background-color: #2c3e50;
+      position: fixed;
+      top: 60px;
+      width: 100%;
+      padding: 20px 0;
+  
+      height: calc(100% - 60px);
+      overflow-y: auto;
+  
+      left: 100%;
+      transition: left 0.3s;
+    }
+  
+    .nav-menu-item {
+      line-height: 70px;
+    }
+  
+    .nav-menu-link:hover,
+    .nav-menu-link_active {
+      background: none;
+      color: #83c5f7;
+    }
+  
+    .nav-toggle {
+      display: block;
+    }
+  
+    .nav-menu_visible {
+      left: 0;
+    }
+  
+    .nav-toggle:focus:not(:focus-visible) {
+      outline: none;
+    }
   }
-
-  /*Fin-Cards*/
+  
+  
