--- a/css_sass/_ofertas.scss
+++ b/css_sass/_ofertas.scss
@@ -1,210 +1,131 @@
-
 /* BARRA DE NAVECION DE OFERTAS*/
-.navOfertas{
-  background-color: #0769e9;
-  height: 80px;
+.logoDeOferta {
+  width: 100px;
+  height: 100px;
+}
+.tituloDeOferta {
+  margin-left: 0px;
+  margin-right: 22px;
+}
+
+.bannerOferta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ddf7fc;
   width: 100%;
-  top: 0;
-  left: 0;
+  height: 100%;
+  max-width: 1343px;
 }
-.nav {
-  display: flex;
-  justify-content: space-between;
-  max-width: 992px;
-  margin: 0 auto;
-}
-.nav-link {
-  color: white;
-  text-decoration: none;
-}
-.nav-menu {
-  display: flex;
-  margin-right: 40px;
-  list-style: none;
-}
-.nav-menu-item {
-  font-size: 18px;
-  margin: 0 10px;
-  line-height: 80px;
-  text-transform: uppercase;
-  width: max-content;
-}
-.nav-menu-link {
-  padding: 8px 12px;
-  border-radius: 3px;
+.bannerOferta img {
+  width: 100%;
+  margin-top: 4px 4px;
 }
 
-.nav-menu-link:hover,
-.nav-menu-link_active {
-  background-color: #034574;
-  transition: 0.5s;
-}
-
-.container-fluid{
-    margin-top: 6rem;
-}
-.bannerOferta{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-     background-color: #ddf7fc;
-    width: 100%;
-    height: 100%;
-}
-.bannerOferta img{
-    width: 80%;
-    margin-top: 6.5rem;
-    }
- 
 /*Cards*/
 .container-card {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    max-width: 1354px;
-    margin: auto;
-  }
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1354px;
+  margin: auto;
+}
 
-  .title-cards {
-    width: 100%;
-    max-width: 1080px;
-    margin: auto;
-    padding: 3px;
-    margin-top: 20px;
-    text-align: center;
-    color: #7a7a7a;
-  }
+.title-cards {
+  width: 100%;
+  max-width: 1080px;
+  margin: auto;
+  padding: 3px;
+  margin-top: 20px;
+  text-align: center;
+  color: #7a7a7a;
+}
 
+.card {
+  width: 100%;
+  margin: 10px;
+  border-radius: 6px;
+  overflow: hidden;
+  background: #fff;
+  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 400ms ease-out;
+  transition: all 400ms ease-out;
+  cursor: default;
+}
+
+h4 {
+  font-size: 1.8rem;
+}
+
+.card:hover {
+  -webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+  -webkit-transform: translateY(-3%);
+  transform: translateY(-3%);
+}
+
+.card img {
+  width: 90%;
+  height: 300px;
+}
+
+.card .contenido-card {
+  padding: 15px;
+  text-align: center;
+}
+
+.card .contenido-card h3 {
+  margin-bottom: 15px;
+  color: #7a7a7a;
+}
+
+.card .contenido-card p {
+  line-height: 1.8;
+  color: #6a6a6a;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.card .contenido-card a {
+  display: inline-block;
+  padding: 10px;
+  margin-top: 10px;
+  text-decoration: none;
+  color: #2fb4cc;
+  border: 1px solid #2fb4cc;
+  border-radius: 4px;
+  -webkit-transition: all 400ms ease;
+  transition: all 400ms ease;
+  margin-bottom: 5px;
+}
+
+.card .contenido-card a:hover {
+  background: #2fb4cc;
+  color: #fff;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .container-card {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
   .card {
-    width: 100%;
-    margin: 10px;
-    border-radius: 6px;
-    overflow: hidden;
-    background: #fff;
-    -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-            box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-    -webkit-transition: all 400ms ease-out;
-    transition: all 400ms ease-out;
-    cursor: default;
+    margin: 15px;
   }
-
-  h4 {
-    font-size: 1.8rem;
+  .logoDeOferta {
+    width: 80px;
+    height: 80px;
+    margin-top: 0px;
   }
+}
 
-  .card:hover {
-    -webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
-            box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
-    -webkit-transform: translateY(-3%);
-            transform: translateY(-3%);
-  }
-
-  .card img {
+@media only screen and (min-width: 320px) and (max-width: 768px) and (min-width: 768px) and (max-width: 1024px) {
+  img {
     width: 90%;
-    height: 300px;
+    height: 200px;
   }
+} /*FIN DE CARD*/
 
-  .card .contenido-card {
-    padding: 15px;
-    text-align: center;
-  }
 
-  .card .contenido-card h3 {
-    margin-bottom: 15px;
-    color: #7a7a7a;
-  }
-
-  .card .contenido-card p {
-    line-height: 1.8;
-    color: #6a6a6a;
-    font-size: 14px;
-    margin-bottom: 5px;
-  }
-
-  .card .contenido-card a {
-    display: inline-block;
-    padding: 10px;
-    margin-top: 10px;
-    text-decoration: none;
-    color: #2fb4cc;
-    border: 1px solid #2fb4cc;
-    border-radius: 4px;
-    -webkit-transition: all 400ms ease;
-    transition: all 400ms ease;
-    margin-bottom: 5px;
-  }
-
-  .card .contenido-card a:hover {
-    background: #2fb4cc;
-    color: #fff;
-  }
-
-  @media only screen and (min-width: 320px) and (max-width: 768px) {
-    .container-card {
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-    }
-    .card {
-      margin: 15px;
-    }
-  }
-
-  @media only screen and (min-width: 320px) and (max-width: 768px) and (min-width: 768px) and (max-width: 1024px) {
-    img {
-      width: 90%;
-      height: 200px;
-    }
-  }/*FIN DE CARD*/
-  /*MEDIA DE NAVEGACION*/
-   /* MOBILE */
-   @media (max-width: 768px) {
-    body {
-      padding-top: 70px;
-    }
-  
-    .navOfertas {
-      height: 60px;
-    }
-   
-    .nav-menu {
-      flex-direction: column;
-      align-items: center;
-      margin: 0;
-      background-color: #2c3e50;
-      position: fixed;
-      top: 60px;
-      width: 100%;
-      padding: 20px 0;
-  
-      height: calc(100% - 60px);
-      overflow-y: auto;
-  
-      left: 100%;
-      transition: left 0.3s;
-    }
-  
-    .nav-menu-item {
-      line-height: 70px;
-    }
-  
-    .nav-menu-link:hover,
-    .nav-menu-link_active {
-      background: none;
-      color: #83c5f7;
-    }
-  
-    .nav-toggle {
-      display: block;
-    }
-  
-    .nav-menu_visible {
-      left: 0;
-    }
-  
-    .nav-toggle:focus:not(:focus-visible) {
-      outline: none;
-    }
-  }
-  
-  
