--- a/css_sass/style.css
+++ b/css_sass/style.css
@@ -334,6 +334,17 @@ textarea {
   margin-right: 22px;
 }
 
+.nav-link {
+  text-decoration: none;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(currentColor), to(currentColor));
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  -webkit-transition: background-size 0.3s;
+  transition: background-size 0.3s;
+}
+
 .bannerOferta {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -345,14 +356,15 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   background-color: #ddf7fc;
-  width: 100%;
-  height: 100%;
+  width: 1341px;
+  height: 533px;
   max-width: 1343px;
 }
 
 .bannerOferta img {
-  width: 80%;
-  margin-top: 4px 4px;
+  width: 1300px;
+  margin-top: 46px;
+  height: 336px;
 }
 
 /*Cards*/
@@ -440,6 +452,12 @@ h4 {
 }
 
 @media only screen and (min-width: 320px) and (max-width: 768px) {
+  .navbar-brand {
+    padding-top: 20px;
+    padding-bottom: 1px;
+    margin-right: 0px;
+    font-size: 2.25px;
+  }
   .container-card {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
@@ -452,16 +470,58 @@ h4 {
     height: 80px;
     margin-top: 0px;
   }
-}
-
-@media only screen and (min-width: 320px) and (max-width: 768px) and (min-width: 768px) and (max-width: 1024px) {
-  img {
-    width: 90%;
+  .bannerOferta {
+    width: 300px;
     height: 200px;
+    max-width: 320px;
+  }
+  .bannerOferta img {
+    width: 80%;
+    margin-top: 152px;
+    height: 55%;
+  }
+  .img-fluid {
+    margin-top: 106.5px;
+    height: 360px;
+  }
+  h2 {
+    font-size: 30px;
+    margin-top: 99px;
   }
 }
 
-/*FIN DE CARD*/
+@media only screen and (min-width: 320px) and (max-width: 768px) and (min-width: 320px) and (max-width: 768px) and (min-width: 768px) and (max-width: 1024px) {
+  h1 {
+    font-size: 40px;
+  }
+  .container-card {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .card {
+    max-width: 768px;
+    margin-left: 10px;
+  }
+  .card img {
+    width: 500px;
+    height: 500px;
+  }
+  .logoDeOferta {
+    width: 80px;
+    height: 80px;
+    margin-top: 0px;
+  }
+  .bannerOferta {
+    width: 768px;
+    height: 500px;
+  }
+  .bannerOferta img {
+    width: 500px;
+    margin-top: 50px;
+    height: 300px;
+  }
+}
+
 /* VARIABLES */
 * {
   margin: 0;
@@ -519,8 +579,8 @@ h1 {
   text-transform: uppercase;
   letter-spacing: 10px;
   font-size: 50px;
-  margin-left: -12rem;
-  margin-right: 10rem;
+  margin-left: -12px;
+  margin-right: 10px;
 }
 
 .btnInicio {
@@ -542,7 +602,7 @@ a:focus {
 h3 {
   background: -webkit-gradient(linear, left top, right top, from(#f32170), color-stop(#ffeb07), color-stop(#2196f3), to(#ff00eb));
   background: linear-gradient(to right, #f32170, #ffeb07, #2196f3, #ff00eb);
-  font-size: 4rem;
+  font-size: 50px;
   font-family: sans-serif;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
@@ -550,6 +610,16 @@ h3 {
   display: inline-block;
   margin-right: 16%;
   margin-top: 0.4%;
+  text-align: center;
+}
+
+.navbar-brand {
+  padding-top: 2px;
+  padding-bottom: 1px;
+  margin-right: 4px;
+  font-size: 6.25px;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 /* SECCION SERVICIOS */
@@ -581,14 +651,16 @@ h3 {
 }
 
 /* banner de ofertas */
-.imagenEncabezadoOferta {
-  width: 100%;
-  margin-top: 6rem;
+.bannerOferta img {
+  width: 1300px;
+  margin-top: 55px;
+  height: 344px;
 }
 
 /* CARRUSEL DE IMAGENES */
 .img-fluid {
-  margin-top: 6.5rem;
+  margin-top: 106.5px;
+  height: 360px;
 }
 
 /*SECCION GALERIA */
@@ -823,7 +895,7 @@ h3 {
   /* VISTA TABLET */
 }
 
-@media only screen and (min-width: 320px) and (max-width: 600px) and (min-width: 601px) and (max-width: 900px) {
+@media only screen and (min-width: 320px) and (max-width: 600px) and (min-width: 768px) and (max-width: 1024px) {
   .gridPadre {
     display: -ms-grid;
     display: grid;
@@ -870,19 +942,31 @@ h3 {
     width: 100%;
     height: 150px;
   }
+  .img-fluid {
+    margin-top: 106.5px;
+  }
   .logo {
     margin-left: 7px;
     width: 36%;
     margin-top: 2px;
     margin-right: 2px;
   }
+  .tituloIndex {
+    font-size: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 10px;
+  }
   h1 {
-    font-size: 35px;
-    margin-left: 2rem;
-    margin-right: 5rem;
+    font-size: 40px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .carousel-innerrr {
+    height: 368px;
   }
   h3 {
-    font-size: 20px;
+    font-size: 5px;
   }
   /* MEDIA DE CONTACTO */
   .formulario {
@@ -891,7 +975,7 @@ h3 {
   #contacto {
     background-size: 100%;
     background-repeat: no-repeat;
-    padding: 6.5rem;
+    padding: 6.5px;
   }
 }
 /*# sourceMappingURL=style.css.map */
