--- a/css_sass/style.scss
+++ b/css_sass/style.scss
@@ -5,6 +5,7 @@
 @import "footer";
 @import "contacto";
 @import "ofertas";
+@import "mediasquery";
 
 
 
@@ -58,8 +59,8 @@ $colorheader: #e7f045;
     text-transform: uppercase;
     letter-spacing: 10px;
     font-size: 50px;
-    margin-left: -12rem;
-    margin-right: 10rem;
+    margin-left: -12px;
+    margin-right: 10px;
   }
 
 
@@ -78,7 +79,7 @@ $colorheader: #e7f045;
   }
   h3 {
     background: linear-gradient(to right, #f32170, #ffeb07, #2196f3, #ff00eb);
-    font-size: 4rem;
+    font-size: 50px;
     font-family: sans-serif;
     text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     text-transform: uppercase;
@@ -86,8 +87,16 @@ $colorheader: #e7f045;
     display: inline-block;
     margin-right: 16%;
     margin-top: 0.4%;
-  }
-
+    text-align: center;
+  } 
+  .navbar-brand {
+    padding-top: 2px;
+    padding-bottom: 1px;
+    margin-right: 4px;
+    font-size: 6.25px;
+    text-decoration: none;
+    white-space: nowrap;
+  } 
   /* SECCION SERVICIOS */
   .contenedor {
     text-align: center;
@@ -114,19 +123,16 @@ $colorheader: #e7f045;
     width: 100%;
   }
   /* banner de ofertas */
-  .imagenEncabezadoOferta {
-    width: 100%;
-    margin-top: 6rem;
+  .bannerOferta img {
+    width: 1300px;
+    margin-top: 55px;
+    height: 344px;
   }
-  
-
-
-
   /* CARRUSEL DE IMAGENES */
   .img-fluid{
-    margin-top: 6.5rem;
-
-  }
+    margin-top: 106.5px;
+    height: 360px;
+  } 
 
   /*SECCION GALERIA */
 
@@ -333,7 +339,7 @@ $colorheader: #e7f045;
     }
 
     /* VISTA TABLET */
-    @media only screen and (min-width: 601px) and (max-width: 900px) {
+    @media only screen and (min-width: 768px) and (max-width: 1024px) {
       .gridPadre {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -374,19 +380,31 @@ $colorheader: #e7f045;
         width: 100%;
         height: 150px;
       }
+      .img-fluid{
+        margin-top: 106.5px;
+        }
       .logo {
         margin-left: 7px;
         width: 36%;
         margin-top: 2px;
         margin-right: 2px;
       }
-      h1 {
-        font-size: 35px;
-        margin-left: 2rem;
-        margin-right: 5rem;
+      .tituloIndex {
+        font-size: 30px;
+        margin-left:0px;
+        margin-right: 0px;
+        margin-top: 10px;
+      }
+      h1{
+        font-size: 40px;
+        margin-left: 0px;
+        margin-right: 0px;
+      } 
+      .carousel-innerrr{
+        height: 368px;
       }
       h3{
-        font-size: 20px;
+        font-size: 5px;
       }
       /* MEDIA DE CONTACTO */
       .formulario {
@@ -395,7 +413,7 @@ $colorheader: #e7f045;
       #contacto {
         background-size: 100%;
         background-repeat: no-repeat;
-        padding: 6.5rem;
+        padding: 6.5px;
       }
     }
   }
